I create buttons and the page but the javascript is not funtional

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
 </head>
 <body>
     
+        <div class="container">
+
+        <div id="header">
+            <h1>CALCULATOR</h1>
+        </div>
+        <div class="main">
+            <input type="" name="entrada" id="entrada" value="1+2">
+        </div>
+        <div class="num">
+            <button id="n1" class="n">1</button>
+            <button id="n2"class="n">2</button>
+            <button id="n3"class="n">3</button>
+            <button id="n4"class="n">4</button>
+            <button id="n5"class="n">5</button>
+            <button id="n6"class="n">6</button>
+            <button id="n7"class="n">7</button>
+            <button id="n8"class="n">8</button>
+            <button id="n9"class="n">9</button>
+        </div>
+        <div class="operations">
+            <button id="+" class="operation">+</button>
+            <button id="-" class="operation">-</button>
+            <button id="*" class="operation">*</button>
+            <button id="/" class="operation">/</button>
+            <button id="=" class="operation">=</button>
+            <button id="reset" class="operation">Limpar</button>
+        </div>
+    
+    </div>
+   
+    <div class="final"></div>
     <script src="javascript.js"></script>
 </body>
 </html>
