Complete the calculator

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="inputs">
             <div id="div">
-
+                
             </div>
         </div>
         <div id="nums">
@@ -18,25 +18,27 @@
                 <button id="n1" class="num" onclick="nu1()">1 </button>
                 <button id="n2" class="num"onclick="nu2()"> 2</button>
                 <button id="n3" class="num"onclick="num3()"> 3</button>
-                <button id="sum" class="operation" onclick="s()">+</button>
+                <button id="sum" class="operation operation-separete" onclick="s()">+</button>
             </div>
             <div class="cont">
                 <button id="n4" class="num"onclick="num4()"> 4</button>
                 <button id="n5" class="num"onclick="num5()"> 5</button>
                 <button id="n6" class="num"onclick="num6()"> 6</button>
-                <button id="less" class="operation" onclick="l()">-</button>
+                <button id="less" class="operation operation-separete" onclick="l()">-</button>
             </div>
             <div class="cont">
                 <button id="n7" class="num"onclick="num7()">7 </button>
                 <button id="n8" class="num"onclick="num8()">8 </button>
                 <button id="n9" class="num"onclick="num9()">9 </button>
-                <button id="mul" class="operation" onclick="m()">*</button>
+                <button id="mul" class="operation operation-separete" onclick="m()">*</button>
             </div>
         </div>
         <div id="operations">
-            <button id="division" class="operation operation-separete" onclick="d()">/</button>
+            <button id="reset" class="operation" style="background-color: red;" onclick="reset()">Reset</button>
+            <button id="n0" class="num"onclick="num0()"> 0</button>
             <button id="equal" class="operation operation-separete" onclick="work()">=</button>
-            <button id="reset" class="operation operation-separete">Reset</button>
+            <button id="division" class="operation operation-separete" onclick="d()">/</button>
+
         </div>
     </div>
 
